Fix issue #164, plus some layout issues on small screens.

--- a/Public/stylesheet.css
+++ b/Public/stylesheet.css
@@ -727,6 +727,7 @@ H4
 .topForm
 {
     background-color: white;
+    padding: 5px;
 }
 
 .sidebarContainer
